<resources>
    <string name="app_name">BusApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">BusApp</string>
    <string name="menu_gallery">Δρομολόγια</string>
    <string name="menu_slideshow">Ρυθμίσεις</string>
    <string name="start_location">Τοποθεσία Εκκίνησης...</string>
    <string name="end_location">Tοποθεσία προορισμού...</string>
    <string name="home_second">Home Second</string>
    <string name="my_location">Επιλογή της τοποθεσίας μου</string>
    <string name="from_map">Επιλογή στο χάρτη</string>
    <string name="no1">busno1</string>
    <string name="no1go">Άναυρος - Νέα Ιωνία</string>
    <string name="no1return">Νέα Ιωνία - Άναυρος</string>
    <string name="no1staseisgo">Στάσεις</string>
    <string name="no1staseisreturn">Στάσεις</string>
    <string name="times">Ώρες</string>
    <string name="buttonStart">ΠΑΜΕ!</string>
    <string name="start">Στάση αναχώρησης</string>
    <string name="end">Στάση άφιξης</string>
    <string name="timeTocome">Άφιξη σε:</string>
    <string name="totalTime">Συνολικός Χρόνος:</string>
</resources>
