<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/toreturn"
        android:layout_width="200dp"
        android:layout_height="52dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bordersroute"
        android:gravity="center"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#F0F2F8"
        app:autoSizeTextType="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/togo" />

    <TextView
        android:id="@+id/togo"
        android:layout_width="200dp"
        android:layout_height="52dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bordersroute"
        android:gravity="center"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#F0F2F8"
        app:autoSizeTextType="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/stationstogo"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/no1staseisgo"
        app:layout_constraintBottom_toTopOf="@+id/stationstoreturn"
        app:layout_constraintStart_toEndOf="@+id/togo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/stationstoreturn"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:text="@string/no1staseisreturn"
        app:layout_constraintStart_toEndOf="@+id/toreturn"
        app:layout_constraintTop_toBottomOf="@+id/stationstogo" />

    <Button
        android:id="@+id/timestoreturn"
        android:layout_width="60dp"
        android:layout_height="52dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="24dp"
        android:text="@string/times"
        app:layout_constraintStart_toEndOf="@+id/stationstoreturn"
        app:layout_constraintTop_toBottomOf="@+id/timetogo" />

    <Button
        android:id="@+id/timetogo"
        android:layout_width="60dp"
        android:layout_height="52dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/times"
        app:layout_constraintBottom_toTopOf="@+id/timestoreturn"
        app:layout_constraintStart_toEndOf="@+id/stationstogo"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>