<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.home.HomeFragment">

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="327dp"
        android:layout_height="42dp"
        android:layout_marginTop="24dp"
        android:alpha="1"
        android:background="@drawable/borders"
        android:baselineAligned="true"
        android:fadeScrollbars="true"
        android:focusable="auto"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:iconifiedByDefault="false"
        android:queryHint="@string/start_location"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <SearchView
        android:id="@+id/searchView3"
        android:layout_width="327dp"
        android:layout_height="42dp"
        android:layout_marginTop="24dp"
        android:alpha="1"
        android:background="@drawable/borders"
        android:baselineAligned="true"
        android:fadeScrollbars="true"
        android:focusable="auto"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:iconifiedByDefault="false"
        android:queryHint="@string/end_location"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/selectinthemap"
        android:layout_width="328dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/borders2"
        android:fontFamily="@font/galindo"
        android:gravity="center_vertical"
        android:text="@string/from_map"
        android:textAlignment="gravity"
        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="italic"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/selectmylocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView3" />

    <ImageButton
        android:id="@+id/imageselectinthemap"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/borders2"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:foregroundGravity="center_vertical"
        android:src="@drawable/ic_place_black_24dp"
        app:layout_constraintBottom_toTopOf="@+id/imageselectmylocation"
        app:layout_constraintEnd_toStartOf="@+id/selectinthemap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView3"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/imageselectmylocation"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:background="@drawable/borders2"
        android:foregroundGravity="center_vertical"
        android:src="@drawable/ic_my_location_black_24dp"
        app:layout_constraintEnd_toStartOf="@+id/selectmylocation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageselectinthemap"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/selectmylocation"
        android:layout_width="328dp"
        android:layout_height="38dp"
        android:background="@drawable/borders2"
        android:fontFamily="@font/galindo"
        android:gravity="center_vertical"
        android:text="@string/my_location"
        android:textColor="#070707"
        android:textSize="17sp"
        android:textStyle="italic"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageselectmylocation"
        app:layout_constraintTop_toBottomOf="@+id/selectinthemap" />

    <ImageButton
        android:id="@+id/buttontogo"
        android:layout_width="70dp"
        android:layout_height="66dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/cyclicbutton"
        android:src="@drawable/ic_arrow_forward_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectmylocation" />

</androidx.constraintlayout.widget.ConstraintLayout>